test/classes/delete-free/undecorated-generic/cannot-default-init-cq.good
cannot-default-init-cq.chpl:3: In function 'test':
cannot-default-init-cq.chpl:4: error: 'bb' cannot be default initialized
cannot-default-init-cq.chpl:5: note: 'bb' is used here before being initialized
