test/classes/delete-free/undecorated-generic/cannot-default-init-cq.chpl
class C { var x: int; }

proc test() {
  var bb: C?;
  writeln(bb.type:string);
}
test();
